--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -123,7 +123,7 @@
                 <h3 class="product-title">{{ product.name }}</h3>
                 <div class="action-container">
                     <div class="left-action">
-                        <button class="btn btn-add-to-cart">Add to Cart</button>
+                        <button data-product={{product.id}} data-action="add" class="btn btn-add-to-cart update-cart">Add to Cart</button>
                     </div>
                     <div class="right-group">
                         <button class="btn btn-view">View</button>
