--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -187,13 +187,13 @@
     font-size: 1.13em;
 }
 
-.cart-row:hover {
+/* .cart-row:hover {
     background: #f0f6ff !important;
 }
 
 .cart-row:hover td {
     background: #f0f6ff !important;
-}
+} */
 
 .btn {
     margin: 5px;
@@ -242,14 +242,14 @@
     background: #fafdff;
     border-radius: 12px;
     margin: 24px 0;
-}
+} 
 .cart-logo:hover,
 .cart-logo:active,
 .cart-logo:focus {
     transform: none !important;
     background: inherit !important;
     color: inherit !important;
-}
+} 
 
 /* Mobile Responsiveness */
 @media (max-width: 900px) {
